# blender-skills

./: .gitignore  README.md  package.json
.claude-plugin/: marketplace.json
blender-mcp-server/: .gitignore  LICENSE  README.md  pyproject.toml  sitecustomize.py
blender-mcp-server/src/blender_mcp/: __init__.py  bbox.py  blender.py  blender_runner.py  blender_runner_actions.py  config.py  gear.py  jobs.py  joints.py  mechanics.py  segmentation.py  server.py  service.py  service_facades.py
blender-mcp-server/tests/: conftest.py  test_bbox.py  test_blender_integration.py  test_config_jobs.py  test_gear.py  test_joints.py  test_segmentation.py  test_server.py  test_service_mechanical.py
docs/: mcp-server-setup.md
skills/_shared/: compat-matrix.md
skills/blender-3d-export/: SKILL.md
skills/blender-compositing/: SKILL.md
skills/blender-headless/: SKILL.md
skills/blender-image-editing/: SKILL.md
skills/blender-mesh-modeling/: SKILL.md
skills/blender-mesh-repair/: SKILL.md
skills/blender-modifiers/: SKILL.md
skills/blender-rendering/: SKILL.md
skills/blender-segmentation/: SKILL.md
