[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp-server"
version = "0.1.0"
description = "Local stdio MCP server for versioned Blender automation and instance-mask image editing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "mcp[cli]>=1.9.0",
  "pydantic>=2.7",
  "Pillow>=10.0",
]

[project.optional-dependencies]
segmentation = ["ultralytics>=8.3"]
test = ["pytest>=8.0"]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blender_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
